# DataFlex-yry

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README-zh.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  test.yml
data/: dataset_info.json  wiki_demo.jsonl
examples/merge_lora/: llama3_lora_sft.yaml  qwen2_5_lora_sft.yaml
examples/test/: test_cluster_less_smoke.yaml  test_cluster_pmp.yaml  test_mix.yaml  test_select.yaml  test_static_mix.yaml  test_weight.yaml
examples/train_full/mixers/: doremi_step1_static_qwen_pt_full.yaml  doremi_step2_dynamic_qwen_pt_full.yaml  doremi_step3_static_qwen_pt_full.yaml  odm_dynamic_qwen_pt_full.yaml
examples/train_lora/mixers/: doremi_step2_dynamic_qwen_pt_lora.yaml  random.yaml
examples/train_lora/selectors/: cluster_less.yaml  custom.yaml  delta_loss.yaml  less.yaml  loss.yaml  loss_pt.yaml  near.yaml  nice.yaml  random.yaml  tsds.yaml
examples/train_lora/weighters/: adapt.yaml  custom.yaml  loss.yaml
scripts/: test_cluster_less_selector.py
skills/: how_to_add_algorithm.md  how_to_use.md
src/dataflex/: __init__.py  cli.py  launcher.py  version.py
src/dataflex/configs/: components.yaml
src/dataflex/core/: registry.py
src/dataflex/offline_selector/: offline_near_selector.py  offline_tsds_selector.py
src/dataflex/train/data/: loader.py
src/dataflex/train/dataset/: __init__.py  mixed_proportion_manager.py
src/dataflex/train/hparams/: dynamic_data_params.py  dynamic_params.py
src/dataflex/train/mixer/: __init__.py  base_mixer.py  doremi_mixer.py  dynamic_moe_mixer.py  odm_mixer.py  random_mixer.py  static_mixer.py
src/dataflex/train/selector/: __init__.py  base_selector.py  cluster_less_selector.py  cluster_pmp_selector.py  custom_selector.py  delta_loss_selector.py  less_selector.py  loss_selector.py  near_selector.py  nice_selector.py  random_selector.py  tsds_selector.py
src/dataflex/train/trainer/: mix_trainer.py  select_trainer.py  weight_trainer.py
src/dataflex/train/weighter/: __init__.py  adapt_weighter.py  base_weighter.py  custom_weighter.py  loss_weighter.py
src/dataflex/utils/: load_component.py  logging.py  selector_io.py
volc_jobs/: dataflex_multidataset_benchmark.yaml  dataflex_selector_batch.yaml  plot_clusterless_experiments.py  run_multidataset_benchmark.py  run_multidataset_benchmark_entry.sh  run_selector_batch.py  run_selector_batch_entry.sh  submit_multidataset_benchmark.sh  submit_selector_batch.sh
